--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
  
   <footer class="secondary_header footer">
   <div></div>
-  <div class="copyright"><a href="https:/app/cd/index.html"style="color:white;">&copy;2022 - <strong>Hello Vocaloid</strong></a></div>
+  <div class="copyright"><a href="/app/cd/index.html"style="color:white;">&copy;2022 - <strong>Hello Vocaloid</strong></a></div>
   </footer>
   </footer>
 </div>
