--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <![endif]-->
 </head>
 <body>
-<img src="/images/cover.png" width="350" height="144" alt=""/>
+<img src="/Hello-Voclaoid/images/cover.png" width="350" height="144" alt=""/>
 <div class="container">
 <header> </header>
   <section>
@@ -25,7 +25,7 @@
       
       <p>Hello Vocaloid由v家爱好者Kevin创立，旨在吸引更多人通过便捷的方式了解v家以及探求更深入的音乐世界。我们将始终秉承非营利性的宗旨，将免费的资源汇总到这里，但我们仍然支持正版，也鼓励通过正版渠道了解Vocaloid。</p>
 </article>
-    <aside class="right_article"><img src="/images/L (20).jpg"" alt="" width="48" height="30" class="placeholder"/> </aside>
+    <aside class="right_article"><img src="/Hello-Voclaoid/images/L (20).jpg"" alt="" width="48" height="30" class="placeholder"/> </aside>
   </section>
   <div class="row">
     <div class="columns">
@@ -56,7 +56,7 @@
  
   <footer class="secondary_header footer">
   <div></div>
-  <div class="copyright"><a href="/app/cd/index.html"style="color:white;">&copy;2022 - <strong>Hello Vocaloid</strong></a></div>
+  <div class="copyright"><a href="/Hello-Voclaoid/app/cd/index.html"style="color:white;">&copy;2022 - <strong>Hello Vocaloid</strong></a></div>
   </footer>
   </footer>
 </div>
