Update and rename error/404.html to 错误/404.html

--- a/错误/404.html
+++ b/错误/404.html
@@ -1,9 +1,8 @@
 <!doctype html>
 <html>
 <head>
-<script src="https://player.lzti.com/api/player/165559402282" id="myhk" key="165559402282" m="1"></script>
+
 <meta charset="utf-8">
-<script src="https://player.lzti.com/api/player/165559402282" id="myhk" key="165559402282" m="1"></script>
 <title>404</title>
 <script type="text/javascript">
 function MM_swapImgRestore() { //v3.0
@@ -32,7 +31,7 @@ function MM_swapImage() { //v3.0
 
 <body onLoad="MM_preloadImages('../Desktop/8c2e6eb7b348fef1922773c36860443.png')">
 <h1 style="font-family:arial;color:white;font-size:40px;">欢迎来到Hello Vocaloid-------------------------- 404</h1>
-<p style="font-family:arial;color:white;font-size:20px;">网站正在建设中，网站正在建设中，网站正在建设中，网站正在建设中，网站正在建设中</p><a href="http://hellovocaloid.vaiwan.com/" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image2','','https://www.hellovocaloid.top/images/L%20(2).png',1)"><img src="https://www.hellovocaloid.top/images/L%20(2).png" alt="" width="273" height="598" id="Image2" align ="right"></a>
+<p style="font-family:arial;color:white;font-size:20px;">网站正在建设中，网站正在建设中，网站正在建设中，网站正在建设中，网站正在建设中</p><a href="http://hellovocaloid.vaiwan.com/" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image2','','/Hello-Voclaoid/images/L%20(2).png',1)"><img src="/Hello-Voclaoid/images/L%20(2).png" alt="" width="273" height="598" id="Image2" align ="right"></a>
 	
 <p style="font-family:arial;color:white;font-size:20px;">网站正在建设中，网站正在建设中，网站正在建设中，网站正在建设中，网站正在建设中</p>
 <p style="font-family:arial;color:white;font-size:20px;">网站正在建设中，网站正在建设中，网站正在建设中，网站正在建设中，网站正在建设中</p>
