Update yyk -  l.html

--- a/yyk -  l.html
+++ b/yyk -  l.html
@@ -13,7 +13,7 @@
 <div id="mainWrapper">
   <header> 
     <!-- This is the header content. It contains Logo and links -->
-    <img src="https://www.hellovocaloid.top/images/cover.png" width="350" height="144" alt=""/>
+    <img src="/Hello-Voclaoid/images/cover.png" width="350" height="144" alt=""/>
     <div id="headerLinks"></div>
   </header>
 	
@@ -29,18 +29,18 @@
           <hr>
           <ul>
             <!-- List of links under menuset 1 -->
-            <li><a href="/error/404.html" title="Link">洛天依&nbsp;</a></li>
-            <li><a href="/error/404.html" title="Link">初音未来</a></li>
-            <li><a href="/error/404.html" title="Link">镜音双子</a></li>
+            <li><a href="/Hello-Voclaoid/错误/404.html" title="Link">洛天依&nbsp;</a></li>
+            <li><a href="/Hello-Voclaoid/错误/404.html" title="Link">初音未来</a></li>
+            <li><a href="/Hello-Voclaoid/错误/404.html" title="Link">镜音双子</a></li>
 			  <li><a href="/error/404.html" title="Link">乐正绫
 				  </a></li>
-			<li><a href="/error/404.html" title="Link">乐正龙牙</a></li>
+			<li><a href="/Hello-Voclaoid/error/404.html" title="Link">乐正龙牙</a></li>
 			<li>
 			  <!--
             <li class="notimp" data_liveedit_tagid="0000000012CCE690"-->
-			  <a href="/error/404.html" title="Link">言和<br>
+			  <a href="/Hello-Voclaoid/error/404.html" title="Link">言和<br>
 			  </a></li>
-			<li><a href="/error/404.html"  title="Link">其他</a></li>
+			<li><a href="/Hello-Voclaoid/error/404.html"  title="Link">其他</a></li>
 			 
           </ul>
         </nav>
@@ -50,9 +50,9 @@
           <hr>
           <ul>
             <!--List of links under menuset 2 -->
-            <li><a href="/error/404.html" title="Link">Vocaloid</a></li>
-            <li><a href="/error/404.html" title="Link">ACE</a></li>
-            <li><a href="/error/404.html" title="Link">X Studio</a></li>
+            <li><a href="/Hello-Voclaoid/错误/404.html" title="Link">Vocaloid</a></li>
+            <li><a href="/Hello-Voclaoid/错误/404.html" title="Link">ACE</a></li>
+            <li><a href="/Hello-Voclaoid/错误/404.html" title="Link">X Studio</a></li>
             <li class="notimp"><!-- notimp class is applied to remove this link from the tablet and phone views --><a href="/error/404.html" title="Link">其他</a></li>
           </ul>
         </nav>
@@ -60,20 +60,20 @@
     </section>
 	<h1 style="color:#66ccff">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 欢迎访问Hello Vocaloid的音乐库</h1>
 	<div style="color:rgba(146,146,146,1.00)">
-	  <p> <a href="http://3mz95pmw.dongtaiyuming.net/D%3A/%E6%AD%8C%E6%9B%B2/%E7%8B%AC.mp3" style="color:#66ccff">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<strong>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 独 —— 洛天依</strong></a></p>
+	  <p> <a href="/Hello-Voclaoid/错误/404.html" style="color:#66ccff">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<strong>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 独 —— 洛天依</strong></a></p>
 		
-	  <p> <a href="http://3mz95pmw.dongtaiyuming.net/D%3A/%E6%AD%8C%E6%9B%B2/%E6%B3%A0%E9%87%8D%E4%B9%9E%E6%84%BF.mp3" style="color:#66ccff">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<strong>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 冷重乞愿 —— 洛天依</strong></a>&nbsp;</p>
+	  <p> <a href="/Hello-Voclaoid/错误/404.html" style="color:#66ccff">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<strong>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 冷重乞愿 —— 洛天依</strong></a>&nbsp;</p>
 		
-	  <p>&nbsp; <a href="http://3mz95pmw.dongtaiyuming.net/D%3A/%E6%AD%8C%E6%9B%B2/%E4%B8%80%E9%87%8D%E5%8A%A0%E5%AE%B3.mp3" style="color:#66ccff">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<strong>&nbsp; &nbsp;  &nbsp; &nbsp; 一重加害 —— 洛天依</strong></a><a 
+	  <p>&nbsp; <a href="/Hello-Voclaoid/错误/404.html" style="color:#66ccff">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<strong>&nbsp; &nbsp;  &nbsp; &nbsp; 一重加害 —— 洛天依</strong></a><a 
 	  
-	  href="http://3mz95pmw.dongtaiyuming.net/D%3A/%E6%AD%8C%E6%9B%B2/%E4%BA%8C%E9%87%8D%E5%8F%98%E9%9D%A9.mp3" style="color:#66ccff">&nbsp;&nbsp;</a></p>
-	  <p><a href="http://3mz95pmw.dongtaiyuming.net/D%3A/%E6%AD%8C%E6%9B%B2/%E4%BA%8C%E9%87%8D%E5%8F%98%E9%9D%A9.mp3" style="color:#66ccff">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<strong>二重变革 —— 洛天依</strong> </a></p>
+	  href="/Hello-Voclaoid/错误/404.html" style="color:#66ccff">&nbsp;&nbsp;</a></p>
+	  <p><a href="/Hello-Voclaoid/错误/404.html" style="color:#66ccff">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<strong>二重变革 —— 洛天依</strong> </a></p>
 		
-<p><a href="http://3mz95pmw.dongtaiyuming.net/D%3A/%E6%AD%8C%E6%9B%B2/%E4%B8%89%E9%87%8D%E7%88%B1%E6%81%8B.mp3" style="color:#66ccff">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<strong> &nbsp; &nbsp; &nbsp; &nbsp; 三重爱恋 —— 洛天依</strong></a></p>
+<p><a href="/Hello-Voclaoid/错误/404.html" style="color:#66ccff">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<strong> &nbsp; &nbsp; &nbsp; &nbsp; 三重爱恋 —— 洛天依</strong></a></p>
 		
-	<p><a href="http://3mz95pmw.dongtaiyuming.net/D%3A/%E6%AD%8C%E6%9B%B2/%E5%9B%9B%E9%87%8D%E7%BD%AA%E5%AD%BD.mp3" style="color:#66ccff">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<strong> &nbsp; &nbsp; &nbsp; &nbsp; 四重罪孽 —— 洛天依</strong></a></p>
+	<p><a href="/Hello-Voclaoid/错误/404.html" style="color:#66ccff">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<strong> &nbsp; &nbsp; &nbsp; &nbsp; 四重罪孽 —— 洛天依</strong></a></p>
 		
-		<p><a href="http://3mz95pmw.dongtaiyuming.net/D%3A/%E6%AD%8C%E6%9B%B2/%E4%BA%94%E9%87%8D%E7%A9%BA%E6%B4%9E.mp3" style="color:#66ccff">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<strong> &nbsp; &nbsp; &nbsp; &nbsp; 五重空洞 —— 洛天依</strong></a></p>
+		<p><a href="/Hello-Voclaoid/错误/404.html" style="color:#66ccff">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<strong> &nbsp; &nbsp; &nbsp; &nbsp; 五重空洞 —— 洛天依</strong></a></p>
 		
 		
 </p>
